writing pseudocode and setting up file tree

--- a/index.html
+++ b/index.html
@@ -2,14 +2,23 @@
 
 <html lang="en" dir="ltr">
 
-<title>Word Guess Game</title>
+
 
 <head>
-
+    <title>Word Guess Game</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
+    <h1>Guess which letter I'm thinking of.</h1>
+    <h5>Bet you can't, loser.</h5>
+
+    <div class="counterDiv" id="winningCounter"></div>
+
+    <div class="counterDiv" id="losingCounter"></div>
+
+    <div id="yourGuesses"></div>
 
 
 
