working on basic functionality and appearance

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 
 <head>
     <title>Word Guess Game</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Rubik" rel="stylesheet">
 </head>
 
 <body>
