--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <head>
     <title>Word Guess Game</title>
     <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/animate.css">
     <link href="https://fonts.googleapis.com/css?family=Rubik" rel="stylesheet">
 </head>
 
